--- a/src/styles/login-form.css
+++ b/src/styles/login-form.css
@@ -1,4 +1,3 @@
-
 input[type="text"],
 input[type="password"],
 textarea,
@@ -6,25 +5,25 @@ textarea,
   height: 50px;
   padding: 0 20px;
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 300;
   line-height: 50px;
   color: #888;
   vertical-align: middle;
-  background: #F8F8F8;
-  border: 3px solid #DDD;
+  background: #f8f8f8;
+  border: 3px solid #ddd;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
-  -webkit-transition: all .3s;
-  -moz-transition: all .3s;
-  -ms-transition: all .3s;
-  -o-transition: all .3s;
-  transition: all .3s;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 textarea,
@@ -38,8 +37,8 @@ input[type="text"]:focus,
 input[type="password"]:focus,
 textarea:focus,
 .form-control:focus {
-  background: #FFF;
-  border: 3px solid #CCC;
+  background: #fff;
+  border: 3px solid #ccc;
   outline: 0;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
@@ -71,14 +70,14 @@ textarea:-webkit-input-placeholder,
   height: 50px;
   padding: 0 20px;
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 300;
   line-height: 50px;
-  color: #FFF;
+  color: #fff;
   text-shadow: none;
   vertical-align: middle;
-  background: #2C323D;
+  background: #2c323d;
   border: 0;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -86,20 +85,20 @@ textarea:-webkit-input-placeholder,
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
-  -webkit-transition: all .3s;
-  -moz-transition: all .3s;
-  -ms-transition: all .3s;
-  -o-transition: all .3s;
-  transition: all .3s;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 .btn:hover {
-  color: #FFF;
+  color: #fff;
   opacity: 0.6;
 }
 
 .btn:active {
-  color: #FFF;
+  color: #fff;
   outline: 0;
   opacity: 0.6;
   -webkit-box-shadow: none;
@@ -108,16 +107,16 @@ textarea:-webkit-input-placeholder,
 }
 
 .btn:focus {
-  color: #FFF;
-  background: #2C323D;
+  color: #fff;
+  background: #2c323d;
   outline: 0;
   opacity: 0.6;
 }
 
 .btn:active:focus,
 .active:focus {
-  color: #FFF;
-  background: #DE995E;
+  color: #fff;
+  background: #de995e;
   outline: 0;
   opacity: 0.6;
 }
