--- a/src/styles/raneto.css
+++ b/src/styles/raneto.css
@@ -1,4 +1,3 @@
-
 a {
   text-decoration: none;
 }
@@ -9,8 +8,8 @@ a {
 }
 
 .header {
-  color: #CCC;
-  background: #2C323D;
+  color: #ccc;
+  background: #2c323d;
 }
 
 .header .container-fluid {
@@ -19,11 +18,11 @@ a {
 }
 
 .header .logo {
-  color: #DDD;
+  color: #ddd;
 }
 
 .header a:hover {
-  color: #FFF;
+  color: #fff;
   text-decoration: none;
 }
 
@@ -59,11 +58,11 @@ a {
 }
 
 .menu .category-title {
-margin: 25px 0 10px 0;
+  margin: 25px 0 10px 0;
 }
 
 .menu .category-title,
-.menu .category-title > a {  
+.menu .category-title > a {
   font-size: 12px;
   text-transform: uppercase;
 }
@@ -92,7 +91,7 @@ margin: 25px 0 10px 0;
   padding: 2rem 1rem;
   margin-bottom: 2rem;
   background-color: #e9ecef;
-  border-radius: .3rem;
+  border-radius: 0.3rem;
 }
 
 .page-home .header .search-form {
@@ -126,9 +125,9 @@ margin: 25px 0 10px 0;
   padding: 40px;
   margin: 40px 20px;
   color: #555;
-  border: 1px solid #E9E9E9;
-  -webkit-box-shadow: 0 1px 50px rgba(0,0,0,0.1);
-  box-shadow: 0 1px 50px rgba(0,0,0,0.1);
+  border: 1px solid #e9e9e9;
+  -webkit-box-shadow: 0 1px 50px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 50px rgba(0, 0, 0, 0.1);
 }
 
 .content .title {
@@ -160,8 +159,8 @@ margin: 25px 0 10px 0;
   max-width: 100%;
   padding: 4px;
   margin: 0 auto;
-  background: #FFF;
-  border: 1px solid #D6D6D6;
+  background: #fff;
+  border: 1px solid #d6d6d6;
   border-radius: 4px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -170,16 +169,16 @@ margin: 25px 0 10px 0;
 
 .content code {
   color: #555;
-  background-color: #FFFDDC;
+  background-color: #fffddc;
 }
 
 .content pre {
-  background: #FFFDDC;
+  background: #fffddc;
   border: 0;
 }
 
 .content pre code {
-  color: #657B83;
+  color: #657b83;
 }
 
 .content .hljs {
@@ -198,7 +197,7 @@ margin: 25px 0 10px 0;
 }
 
 .content .page-meta a:hover {
-  color: #428BCA;
+  color: #428bca;
   text-decoration: none;
 }
 
@@ -209,7 +208,7 @@ margin: 25px 0 10px 0;
 }
 
 .page-excerpt .search-query {
-  background: #FFFDDC;
+  background: #fffddc;
 }
 
 .error {
@@ -217,5 +216,4 @@ margin: 25px 0 10px 0;
 }
 
 @media only screen and (max-width: 767px) {
-
 }
