--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -22,9 +22,9 @@
   </div>
 </div>
 
-<div class="row home-categories">
+<div class="home-categories">
   {{#pages}} {{#is_index}} {{#files.length}}
-  <div class="col col-sm-4 col-xs-12">
+  <div class="col">
     <div class="card {{class}}">
       <h2 class="card-heading">{{lang.global.mainArticles}}</h2>
       <ul class="list-group pages">
@@ -37,7 +37,7 @@
     </div>
   </div>
   {{/files.length}} {{/is_index}} {{^is_index}}
-  <div class="col col-sm-4 col-xs-12">
+  <div class="col">
     <div class="card {{class}}">
       <h2 class="card-heading">{{title}}</h2>
       <ul class="list-group pages">
