Dependencies: Replace ghostdown with marked and codemirror v5.x

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -14,7 +14,7 @@
           name="search"
           placeholder="{{lang.home.searchKnowledgeBase}}"
         />
-        <button type="submit" class="btn btn-primary btn-lg">
+        <button type="submit" class="btn btn-primary">
           {{lang.global.search}}
         </button>
       </div>
