--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -68,7 +68,11 @@
   <script src="{{config.base_url}}/lib/bootstrap/dist/js/bootstrap.min.js"></script>
   <!-- TODO: Move back to package.json include -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
-  <script src="{{config.base_url}}/scripts/ghostdown.js"></script>
+  <script src="{{config.base_url}}/lib/marked/lib/marked.umd.js"></script>
+  <script src="{{config.base_url}}/lib/codemirror/lib/codemirror.js"></script>
+  <script src="{{config.base_url}}/lib/codemirror/mode/markdown/markdown.js"></script>
+  <script src="{{config.base_url}}/lib/codemirror/addon/edit/continuelist.js"></script>
+  <script src="{{config.base_url}}/scripts/editor.js"></script>
   <script src="{{config.base_url}}/scripts/raneto.js"></script>
 
 </body>
