Dependencies: Remove popperjs and use bootstrap full bundle

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -168,7 +168,7 @@
       data-rtl="{{config.rtl_layout}}"
     ></script>
     <script src="{{config.base_url}}/lib/jquery/dist/jquery.min.js"></script>
-    <script src="{{config.base_url}}/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="{{config.base_url}}/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{{config.base_url}}/lib/@fixhq/sweetalert2/dist/sweetalert2.min.js"></script>
     <script src="{{config.base_url}}/scripts/login.js"></script>
   </body>
