--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -64,8 +64,7 @@
 
   <!-- JavaScript -->
   <script src="{{config.base_url}}/lib/jquery/dist/jquery.min.js"></script>
-  <script src="{{config.base_url}}/lib/@popperjs/core/dist/umd/popper.min.js"></script>
-  <script src="{{config.base_url}}/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="{{config.base_url}}/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <!-- TODO: Move back to package.json include -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
   <script src="{{config.base_url}}/lib/marked/lib/marked.umd.js"></script>
