--- a/src/styles/raneto.rtl.css
+++ b/src/styles/raneto.rtl.css
@@ -4,27 +4,25 @@
   font-family: "Roboto", sans-serif;
 }
 
-.header .logo {
-  margin-right: 20px;
-  font-size: 20px;
-  line-height: 34px;
+/* Home */
+#home-search {
+  border-radius: 0 0.375rem 0.375rem 0 !important;
+}
+.jumbotron .search-form .btn {
+  border-radius: 0.375rem 0 0 0.375rem !important;
+}
+.jumbotron .search-form .form-control {
+  border: 2px solid var(--primary-color) !important;
+  border-left: none !important;
 }
 
-.header .search-form {
-  margin-left: 20px;
+/* Page Template Styles */
+.add-page {
+  margin-left: 0 !important;
+  margin-right: auto !important;
 }
 
-.footer .copyright {
-  margin: 0 0 40px 20px;
-  font-size: 85%;
-  color: #999;
-}
-
-.list-group {
-  padding-left: unset;
-  padding-right: 0;
-}
-
+/* Other Unconfirmed */
 .header .container-fluid .row .col-sm-6 form {
   float: left !important;
 }
